# Argentum

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: release.yml  release_web.yml
argentum/: Cargo.toml
argentum-core/: Cargo.toml
argentum-core/src/: argentum.rs  audio.rs  bus.rs  cartridge.rs  common.rs  cpu.rs  gameboy.rs  joypad.rs  lib.rs  ppu.rs  timer.rs  timers.rs  util.rs
argentum-core/src/bootrom/: README.md
argentum-core/src/cpu/: decode.rs  instructions.rs  mod.rs  registers.rs
argentum-native/: Cargo.toml
argentum-native/src/: main.rs  renderer.rs
argentum-sdl/: Cargo.toml
argentum-sdl/src/: renderer.rs
argentum-sdl/src/images/: argentum_logo.rgb
argentum-web/: Cargo.toml  README.md
argentum-web/src/: lib.rs
argentum-web/src/js/: snippet.js
argentum-web/www/: index.html
argentum/src/: bus.rs  cpu.rs  joypad.rs  ppu.rs  timer.rs
argentum/src/bootrom/: README.md
argentum/src/cpu/: decode.rs  instructions.rs
crates/argentum/: Cargo.toml
crates/argentum-native/src/: main.rs
crates/argentum-web/: README.md
crates/argentum-web/src/: lib.rs
crates/argentum-web/www/: index.html
crates/argentum-web/www/js/: index.js
crates/argentum/src/: argentum.rs  bus.rs  cartridge.rs  cpu.rs  helpers.rs  joypad.rs  lib.rs  ppu.rs  timer.rs
crates/argentum/src/bus/: bootrom.rs  dma.rs  interrupts.rs  speed_switch.rs
crates/argentum/src/cartridge/: mbc0.rs  mbc1.rs  mbc3.rs  mbc5.rs
crates/argentum/src/cpu/: decode.rs  instructions.rs  registers.rs
src/: fps_limiter.rs  frontend.rs  main.rs  renderer.rs
src/shaders/: frag.glsl  vert.glsl
wasm/: argentum_web.js  argentum_web_bg.wasm  package.json
