[workspace]
members = [
    "argentum-core",
]

[package]
name = "argentum-gb"
version = "0.1.1"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
argentum-core = { path = "./argentum-core" }
clap = "3.0.0-beta.2"
env_logger = "0.8.3"
fermium = "20014.4.1"
gl33 = "0.2.1"

[profile.release]
lto = "thin"
