[package]
name = "argentum-native"
version = "0.4.3"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
argentum = { path = "../argentum" }
clap = "3.0.0-beta.4"
pixels = "0.6.0"
sdl2 = { version = "0.35.0", features = ["bundled", "raw-window-handle", "static-link"] }
