[package]
name = "argentum-native"
version = "0.4.3"
authors = ["Anish Jewalikar <anishjewalikar@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
argentum = { path = "../argentum" }
clap = "3.0.1"
pixels = "0.6.0"
sdl2 = { version = "0.34.5", features = ["bundled", "raw-window-handle", "static-link"] }
