[package]
name = "argentum-web"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argentum = { path = "../argentum" }
rodio = { version = "0.14.0", default-features = false, features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.75"

[dependencies.web-sys]
version = "0.3.52"
features = [
    "CanvasRenderingContext2d",
    "ImageData",
]
